--- a/global_reductions/path_breaker.tex
+++ b/global_reductions/path_breaker.tex
@@ -320,14 +320,7 @@ Given a derivation $\Phi$ where the atoms $a_1$ and $a_2$ occur, such that the f
 \vcenter{\hbox{\includegraphics{Figures/exPB1}}}
 \quad,
 \]
-
-\TODO{Alessio said: `\emph{This is a long shot. Perhaps you can argue a bit more and more clearly about the red edges. Not clear what the latter and former subflows are.}'.}
-
-where all the edges in $\phi_1$ are mapped to from $a_1$ and all the edges in $\phi_2$ are mapped to from $a_2$, and there are no edges in $\psi$ that are mapped to from $a_1$ or $a_2$, then the flow associated with $\PB((\Phi,a_1),a_2)$ is the juxtaposition of the following three flows (where indications of the different isomorphisms are left out):
-
-\TODO{adjust labels}
-
-\TODO{state that we ignore isomorphisms}
+and where all the edges in $\phi_1$ are mapped to from $a_1$ and all the edges in $\phi_2$ are mapped to from $a_2$, and there are no edges in $\psi$ that are mapped to from $a_1$ or $a_2$, then the flow associated with $\PB((\Phi,a_1),a_2)$ is the juxtaposition of the following three flows (where indications of the different isomorphisms are left out):
 
 \TODO{put flows on one page (how?)}
 
