Remove mention of bureaucracy

--- a/normal_forms.tex
+++ b/normal_forms.tex
@@ -4,7 +4,7 @@ In this chapter we see the first use of atomic flows, namely to define normal fo
 
 In both Gentzen-style formalisms and deep-inference formalisms, the cut can be considered horizontal composition of two proofs. We make two observations: 1) deep-inference formalisms are symmetric in the vertical axis, whereas Gentzen-style formalisms are not; and 2) in order for the cut to be admissible from deep-inference derivations the symmetry must be broken, to correspond to the asymmetry of Gentzen-style formalisms. In particular, the cut is only admissible from proofs and not derivations.
 
-These observations prompted us to look for a generalisation of cut elimination that work for all deep-inference derivations. Furthermore, since we are in the business of designing bureaucracy free formalisms, we wanted normal forms based on geometric notions which would be as syntax independent as possible.
+These observations prompted us to look for a generalisation of cut elimination that work for all deep-inference derivations. Furthermore, since we are in the business of designing new formalisms, we wanted normal forms based on geometric notions which would be as syntax independent as possible.
 
 We defined normal forms based on the causal dependency between structural inference rule instances. Atomic flows contain (by design) exactly the information needed in order to define normal forms in this way.
 
