--- a/formalism.tex
+++ b/formalism.tex
@@ -8,7 +8,9 @@ The idea of a new formalism, named \emph{formalism A} based on the calculus of s
 
 \TODO{Never use the term ``bureaucracy free'' or ``lack of bureaucracy''. Instead use ``bureaucracy reduced'' or ``reduced bureaucracy''. Moreover, the main benefit is the plasticity, not the bureaucracy.}
 
-In this chapter I define a formalism based on the ideas of formalism A and call it (as suggested by Fran\c{c}ois Lamarche) \emph{the functorial calculus}. The reason to introduce a new formalism is that its lack of bureaucracy greatly simplifies the presentation of some of the more technical results in this thesis (in particular Section~\vref{subsection:ThresholdFormulae}).
+\Tom{Removed mentioning of `bureaucrcacy':}
+
+In this chapter I define a formalism based on the ideas of formalism A and call it (as suggested by Fran\c{c}ois Lamarche) \emph{the functorial calculus}. The reason to introduce a new formalism is that it greatly simplifies the presentation of some of the more technical results in this thesis (in particular Section~\vref{subsection:ThresholdFormulae}).
 
 After presenting the functorial calculus we compare it briefly with the calculus of structures before we introduce the standard deductive system for classical logic in deep inference and show some preliminary results.
 
