--- a/normal_forms.tex
+++ b/normal_forms.tex
@@ -103,17 +103,16 @@ The first flow is weakly streamlined, the other two are hyper streamlined:
 We now state some facts whose proofs are immediate from Definition~\vref{definition:FlowNormalForms}.
 
 \begin{proposition}\label{proposition:FlowWeaklyStreamlinedPolarity}
-Given a polarity assignment $\pi$, a flow that is weakly streamlined with respect to both $\pi$ and $\bar\pi$ is weakly streamlined. 
+Given a polarity assignment $\pi$, a flow that is weakly streamlined with respect to both $\pi$ and $\bar\pi$ is weakly streamlined.
 \end{proposition}
 
 \begin{proposition}\label{proposition:FlowCutFree}
 A streamlined flow with no pair of upper (resp., lower) edges such that there is an $\ai$-path between them, contains no cut (resp., axiom) vertices.
 \end{proposition}
 
-\newcommand{\KS}{\mathsf{KS}}
-\TODO{$\KS$!}
+\Tom{Removed the use of the name KS, as this was the only place it was used and as it was not defined.}
 
-The following proposition makes the connection between cut elimination and streamlining. We consider the special case of atomic flows of proofs, \emph{i.e.}, atomic flows without upper edges, and observe that a streamlined proof is cut free and a hyper streamlined proof is a proof in system $\KS$.
+The following proposition makes the connection between cut elimination and streamlining. We consider the special case of atomic flows of proofs, \emph{i.e.}, atomic flows without upper edges, and observe that a streamlined proof is cut free and a hyper streamlined proof is a proof in the system $\SKS\setminus\{\aiu,\acu,\awu\}$.
 
 %---------------------------------------
 \begin{proposition}\label{proposition:FlowNormalFormsNoUpper}
