Turn on microtype

--- a/thesis.tex
+++ b/thesis.tex
@@ -6,7 +6,7 @@
 
 \usepackage{makeidx}
 \makeindex
-%\usepackage{microtype}
+\usepackage[expansion=false]{microtype}
 
 \usepackage{fancyhdr}
 \usepackage{amsmath,amsthm}
