--- a/global_reductions/path_breaker.tex
+++ b/global_reductions/path_breaker.tex
@@ -313,6 +313,10 @@ If $\Phi$ is weakly streamlined with respect to both $a$ and $\bar a$, the resul
 \end{proof}
 %----------
 
+\Tom{Added informal text:}
+
+We now give an example of an application of $\PB$. In particular we want to show its inherent non-confluency.
+
 %-----------------------------------------
 \begin{example}\label{example:PathBreaker}
 Given a derivation $\Phi$ where the atoms $a_1$ and $a_2$ occur, such that the flow associated with $\Phi$ is
@@ -322,12 +326,10 @@ Given a derivation $\Phi$ where the atoms $a_1$ and $a_2$ occur, such that the f
 \]
 and where all the edges in $\phi_1$ are mapped to from $a_1$ and all the edges in $\phi_2$ are mapped to from $a_2$, and there are no edges in $\psi$ that are mapped to from $a_1$ or $a_2$, then the flow associated with $\PB((\Phi,a_1),a_2)$ is the juxtaposition of the following three flows (where indications of the different isomorphisms are left out):
 
-\TODO{put flows on one page (how?)}
-
 \[
 \vcenter{\hbox{\includegraphics{Figures/exPB2}}}
 \quad.
 \]
-We marked some edges in red to point out the fundamental difference between the subflows containing $\phi_1$ and the subflows containing $\phi_2$
+We marked some edges in red to point out the fundamental difference between the subflows containing $\phi_1$ and the subflows containing $\phi_2$.
 \end{example}
 %------------
